--- a/index.css
+++ b/index.css
@@ -25,3 +25,15 @@ body {
 #root {
   min-height: 100vh;
 }
+
+.glass-player-youtube-frame {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  border-radius: inherit;
+  display: block;
+  background-color: #000;
+  pointer-events: none;
+}
